<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_daily"
        android:icon="@drawable/ic_activity"
        android:title="@string/title_daily" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/ic_picture"
        android:title="@string/title_gallery" />

    <item
        android:id="@+id/navigation_music_video"
        android:icon="@drawable/ic_video"
        android:title="@string/title_music_video" />

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_me"
        android:title="@string/title_profil" />


    
</menu>
